﻿10.11 -> 10.12
XX/XX/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance:
 • More frequent re-aiming (each frame) + starts targetting before units enters range (at maxrange + 10%)
 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
 • Arm Missile Ship damages increased 800 -> 900 (damages vs commanders unchanged)

Other:
 • Added option "Resolution" (doesnt always work in fullscreen mode, and might cause freeze)
 • Added option "Move Window Position"
 • Added option "Contain mouse inside window"
 • Added options "Camera smoothing" and "Tracking cam smoothing" slider
 • Player camara tracking also limits view to players viewpoint and losmode
 • Resource bars: when low energy: red background, when overflowing: resource colored
 • Advplayerlist auto collapses, availible in options: Interface -> "Playerlist auto collapses"
 • Changed some air thrusters sizes and they wont show when plane is crashing
 • Added lups thrusters to armatlas/corvalk/banshee
 • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
 • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'

Fixes:
 • Options widget remembers/restores some spring config settings (switching engines lately made config be reset)
 • Auto closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
 • Fixed DAI echospam + working with multiple DAI bots + behavior improvements
 • Decoy com attacked warning sound is now a regular unit under attack sound
 • Fixed "map edge extension" not always showing up when it should
 • Fixed "States Prefs" widget overriding config table with empty table after loading a replay
 • Fixed Bloom rendering the map black on certain maps

Removed:
 • Removed "SmoothCam" widget: its integrated into options widget
 • Removed "GroupMove" widget because it had side effects/downsides
 • Removed old console and old ally resource bars widget