@@ -134,7 +134,7 @@ return {
 				name = "Pop-up heavy  long range g2g plasna cannon",
 				noselfdamage = true,
 				predictboost = 0.2,
-				range = 1320,
+				range = 1380,
 				reloadtime = 1.8,
 				soundhit = "xplomed2",
 				soundhitwet = "splslrg",
@@ -169,7 +169,7 @@ return {
 				name = "Pop-up high-trajectory heavy  long range AoE g2g plasma cannon",
 				noselfdamage = true,
 				proximitypriority = -2,
-				range = 1320,
+				range = 1380,
 				reloadtime = 7,
 				soundhit = "xplomed2",
 				soundhitwet = "splslrg",
