@@ -130,7 +130,7 @@ return {
 				name = "Pop-up long-range heavy g2g plasma cannon",
 				noselfdamage = true,
 				predictboost = 0.2,
-				range = 1335,
+				range = 1390,
 				reloadtime = 2.1,
 				soundhit = "xplomed2",
 				soundhitwet = "splslrg",
@@ -165,7 +165,7 @@ return {
 				name = "Pop-up high-trajectory long-range heavy g2g AoE plasma cannon",
 				noselfdamage = true,
 				proximitypriority = -2,
-				range = 1335,
+				range = 1390,
 				reloadtime = 7,
 				soundhit = "xplomed2",
 				soundhitwet = "splslrg",
